# nshconfig

./: .dir2textignore  .gitignore  .rooignore  AGENTS.md  PYDANTIC_UPGRADE.md  README.md  REVIEW.md  SKILL.md  V2_CORE.md  V2_DESIGN.md  noxfile.py  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: docs.yml
docs/source/: conf.py  contributing.md  index.md  installation.md  quickstart.md  usage.md
docs/source/features/: config_codegen.md  config_formats.md  deduplication.md  draft_configs.md  hash_functionality.md  index.md  invalid_config.md  lightning_integration.md  missing_constant.md  root_config_cli.md  singleton.md  type_registry.md
docs/source/guides/: drafts.md  failures.md  interpolation.md  migration.md  provenance.md  transport.md  typing.md
examples/config_codegen/exported_configs_json/: __init__.py
examples/config_codegen/exported_configs_json/configs/: __init__.py
examples/config_codegen/exported_configs_json/configs/model/: ModelConfig.schema.json  __init__.py
examples/config_codegen/exported_configs_typed_dict/: __init__.py
examples/config_codegen/exported_configs_typed_dict/configs/: __init__.py
examples/config_codegen/exported_configs_typed_dict/configs/model/: ModelConfig_typed_dict.py  __init__.py
examples/config_codegen/my_module/configs/: model.py
notebooks/: nested.ipynb  root_config.ipynb  test.ipynb  typed_dict_dev.ipynb
scripts/: check_pydantic_versions.py  publish.sh  run_tests.py
src/nshconfig/: __init__.py  _config.py  _docs_extractor.py  _export.py  _missing.py  _registry.py  _settings.py  _treescope_util.py  config.py
src/nshconfig/_skill/: SKILL.md
src/nshconfig/_src/: adapter.py  config.py  errors.py  export.py  finalize.py  interp.py  invalid.py  json_schema.py  missing.py  provenance.py  pydantic_exports.py  pydantic_settings_export.py  registry.py  root.py  scope.py  singleton.py  transport.py  treescope.py  treescope_util.py  typing_inspect_.py  utils.py
src/nshconfig/types/: __init__.py  cached_path.py
tests/: conftest.py  scenario.py  test_adapter.py  test_callable_config.py  test_config.py  test_config_list.py  test_dict_serialization.py  test_draft_configs.py  test_failures.py  test_hash.py  test_interp.py  test_invalid.py  test_json_serialization.py  test_lifecycle.py  test_missing.py  test_model_config.py  test_provenance.py  test_pydantic_reexports.py  test_registry.py  test_registry_failure_case_from_nshtrainer.py  test_registry_indirect.py  test_singleton.py  test_smoke.py  test_threading.py  test_toml_serialization.py  test_transport.py  test_treescope.py  test_typing.py  test_verbs.py  test_yaml_serialization.py
tests/typing_probes/: probe_bad.py  probe_ok.py  pyrightconfig.json
v2_prototype/: nshv2.py  nshv2_smoke.py  nshv2_types.py
