[project]
name = "nshconfig"
version = "2.0.0a1"
description = "Typed, provenance-aware configuration for ML runs: drafts, interpolation, one validation boundary. Powered by Pydantic."
authors = [{ name = "Nima Shoghi", email = "nimashoghi@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = ["pydantic>=2.13", "typing-extensions"]

[project.optional-dependencies]
treescope = ["treescope"]
docs = ["sphinx", "sphinx-rtd-theme", "myst-parser", "sphinx-copybutton"]

[project.urls]
homepage = "https://github.com/nimashoghi/nshconfig"

[dependency-groups]
dev = [
    "basedpyright",
    "treescope",
    "ruff",
    "pytest",
    "pytest-cov",
    "nox",
    "packaging",
    "cloudpickle",
    "ipykernel",
    "sphinx",
    "sphinx-rtd-theme",
    "myst-parser",
    "sphinx-copybutton",
]

[tool.uv]
constraint-dependencies = ["urllib3>=2.6.3"]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[tool.basedpyright]
typeCheckingMode = "standard"
deprecateTypingAliases = true
strictListInference = true
strictDictionaryInference = true
strictSetInference = true
reportPrivateImportUsage = "none"
reportMatchNotExhaustive = "warning"
reportOverlappingOverload = "warning"
reportUnnecessaryTypeIgnoreComment = "warning"
reportImplicitOverride = "warning"
reportIncompatibleMethodOverride = "information"

[tool.ruff.lint]
ignore = ["E731", "E741"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=nshconfig --cov-report=term-missing"
